<resources>
    <string name="app_name">扫描王</string>
    <string name="homepager_name">首页</string>
    <string name="homecreatetask_name">文档</string>
    <string name="homemanage_name">发现</string>
    <string name="homepeople_name">我的</string>
    <string name="login_name">账号：</string>
    <string name="login_name_hint">昵称或手机</string>
    <string name="login_password">密码：</string>
    <string name="login_password_hint">....</string>
    <string name="login_login">登录</string>
    <string name="login_registered">注册</string>
    <string name="register_tel">手机：</string>
    <string name="register_tel_hint">请输入您的电话号码</string>
    <string name="register_mail">邮箱：</string>
    <string name="register_mail_hint">请输入您的邮箱</string>
    <string name="register_name">昵称：</string>
    <string name="register_name_hint">请输入您的昵称</string>
    <string name="register_password">确认密码：</string>
    <!--webview-->
    <string name="webview_error"> 系统维护中...</string>

    <!--文件选择器-->
    <string name="mode_file">文件选择</string>
    <string name="mode_file_multi">文件多选</string>
    <string name="mode_folder">文件夹选择</string>
    <string name="mode_folder_multi">文件夹多选</string>
    <string name="action_fileselector_ok">完成</string>

    <!--开启相机-->
    <string name="open_camera">This app needs access to your camera so you can take pictures...</string>

    <!--xlistview-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>


    <string name="srl_header_pulling">下拉可以刷新</string>
    <string name="srl_header_refreshing">正在刷新…</string>
    <string name="srl_header_loading">正在加载…</string>
    <string name="srl_header_release">释放立即刷新</string>
    <string name="srl_header_finish">刷新完成</string>
    <string name="srl_header_failed">刷新失败</string>
    <string name="srl_header_update">上次更新 M-d HH:mm</string>
    <string name="srl_header_secondary">释放进入二楼</string>

    <string name="srl_footer_pulling">上拉加载更多</string>
    <string name="srl_footer_release">释放立即加载</string>
    <string name="srl_footer_loading">正在加载…</string>
    <string name="srl_footer_refreshing">正在刷新…</string>
    <string name="srl_footer_finish">加载完成</string>
    <string name="srl_footer_failed">加载失败</string>
    <string name="srl_footer_nothing">没有更多数据了</string>

    <string name="srl_content_empty">SmartRefreshLayout中没有找到内容视图。您是否忘记在xml布局文件中添加？</string>
    <string name="srl_component_falsify" formatted="false">%s 虚假区域\n代表运行时拖动的高度【%.1fdp】 \n而不会显示任何东西</string>


    <string name="pay">支付</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_wxpay">微信支付</string>
    <string name="pay_wxpay2">微信支付2</string>
    <string name="pay_ylpay">银联支付</string>
    <string name="pay_start">发起支付</string>
    <string name="pay_auth_login">支付宝授权登录</string>
    <string name="permissions_refuse_authorization">被永久拒绝授权，请手动授予权限</string>
    <string name="permissions_rror">获取权限失败</string>
    <string name="pay_dense">加密解密</string>
    <string name="pay_dense_test1">生成公钥和私钥</string>
    <string name="pay_dense_test2">加密请求内容 解密请求内容</string>
    <string name="upload_pic_error">上传失败，请稍后再试</string>
    <string name="net_error">网络异常，请稍后再试</string>

    <!--zxing-->
    <string name="qr_scan_flash">打开闪光灯</string>
    <string name="qr_scan_pic">相册</string>
    <string name="qr_scan">扫一扫</string>
    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>
    <!--zxing end-->
</resources>
