<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_alipay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:gravity="center"
        android:text="@string/pay_alipay" />

    <TextView
        android:id="@+id/tv_wxpay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:gravity="center"
        android:text="@string/pay_wxpay"
        app:layout_constraintTop_toBottomOf="@id/tv_alipay" />

    <TextView
        android:id="@+id/tv_ylpay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_height"
        android:gravity="center"
        android:text="@string/pay_ylpay"
        app:layout_constraintTop_toBottomOf="@id/tv_wxpay" />
</android.support.constraint.ConstraintLayout>