<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.haxi.mh.ui.activity.MainActivity">

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/grey_ab"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/y40"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            style="@style/myRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/homepager_selector"
            android:text="@string/homepager_name"/>

        <RadioButton
            style="@style/myRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/homecreatetask_selector"
            android:text="@string/homecreatetask_name"/>

        <RadioButton
            style="@style/myRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/homemanage_selector"
            android:text="@string/homemanage_name"/>

        <RadioButton
            style="@style/myRadioButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/homepeople_selector"
            android:text="@string/homepeople_name"/>

    </RadioGroup>

</LinearLayout>
