<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 整体透明画布 -->

    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="top"
            android:background="@color/colorPrimaryDark">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/backIv"
                android:layout_width="48dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_back"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/qr_scan"
                android:textColor="#ffffff"
                android:textSize="20sp" />


        </RelativeLayout>


        <!-- 扫描取景框 -->
        <com.haxi.mh.utils.zxingutil.view.ViewfinderView
            android:id="@+id/viewfinder_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/bottomLayout"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark"
            android:orientation="horizontal">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/flashLightLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/flashLightIv"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    app:srcCompat="@drawable/ic_close"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:id="@+id/flashLightTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/qr_scan_flash"
                    android:textColor="#ffffff" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/albumLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/albumIv"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:tint="#ffffffff"
                    app:srcCompat="@drawable/ic_photo"
                    tools:ignore="VectorDrawableCompat" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/qr_scan_pic"
                    android:textColor="#ffffff" />
            </android.support.v7.widget.LinearLayoutCompat>


        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>